--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 *{margin:0; padding:0;}
+ul{ list-style: none;}
+.mt20{ margin-left: 20px;}
 
 /* clock style */
 .clock{width:240px;height:240px; border-radius:50%; border:5px solid #fff; margin:100px auto; position:absolute; right:50px; top: -80px; }
@@ -9,3 +11,7 @@
 .clock span.bigScale{width:6px; margin-left:-3px; height:15px;}
 .clock span strong{ position:absolute; top:18px; width:30px; left:50%; margin-left:-15px; text-align:center;}
 .clock .cap{width:10px; height:10px; border-radius:50%; background:#000; position:absolute; top:50%; left:50%; margin-top:-5px; margin-left:-5px; z-index:2;}
+
+/* przj 个人总结 */
+#grzj dl{ margin-left: 20px;}
+#grzj span{cursor: pointer; margin-left: 10px;}
