--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@ ul{ list-style: none;}
 .mt20{ margin-left: 20px;}
 
 /* clock style */
-.clock{width:240px;height:240px; border-radius:50%; border:5px solid #fff; margin:100px auto; position:absolute; right:50px; top: -80px; }
-.clock .hou{width:8px; height:64px; background:#333; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-4px; top:50px; -webkit-transform-origin:center bottom;}
-.clock .min{width:6px; height:80px; background:#333; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-3px; top:36px; -webkit-transform-origin:center bottom;}
-.clock .sec{width:4px; height:96px; background:red; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-2px; top:21px; -webkit-transform-origin:center bottom;}
-.clock span{width:4px; height:10px; background:#ccc; position:absolute; left:50%; margin-left:-2px; top:0; -webkit-transform-origin:center 115px;}
+.clock{width:180px;height:180px; border-radius:50%; border:5px solid #fff; margin:100px auto; position:absolute; right:50px; top: -80px; }
+.clock .hou{width:8px; height:36px; background:#333; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-4px; top:50px; -webkit-transform-origin:center bottom; z-index: 99;}
+.clock .min{width:6px; height:48px; background:#333; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-3px; top:36px; -webkit-transform-origin:center bottom; z-index: 100;}
+.clock .sec{width:4px; height:60px; background:red; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-2px; top:24px; -webkit-transform-origin:center bottom; z-index: 101;}
+.clock span{width:4px; height:10px; background:#ccc; position:absolute; left:50%; margin-left:-2px; top:0; -webkit-transform-origin:center 85px;}
 .clock span.bigScale{width:6px; margin-left:-3px; height:15px;}
 .clock span strong{ position:absolute; top:18px; width:30px; left:50%; margin-left:-15px; text-align:center;}
-.clock .cap{width:10px; height:10px; border-radius:50%; background:#000; position:absolute; top:50%; left:50%; margin-top:-5px; margin-left:-5px; z-index:2;}
+.clock .cap{width:10px; height:10px; border-radius:50%; background:#000; position:absolute; top:50%; left:50%; margin-top:-5px; margin-left:-5px; z-index:199;}
 
 /* przj 个人总结 */
 #grzj dl{ margin-left: 20px;}
