--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 *{margin:0; padding:0;}
 ul{ list-style: none;}
 .mt20{ margin-left: 20px;}
+.clear:after{clear:both;content:'';display:block}
 
 /* clock style */
 .clock{width:180px;height:180px; border-radius:50%; border:5px solid #fff; margin:100px auto; position:absolute; right:50px; top: -80px; }
 .clock .hou{width:8px; height:36px; background:#333; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-4px; top:50px; -webkit-transform-origin:center bottom; z-index: 99;}
-.clock .min{width:6px; height:48px; background:#333; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-3px; top:36px; -webkit-transform-origin:center bottom; z-index: 100;}
+.clock .min{width:6px; height:48px; background:#333; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-3px; top:38px; -webkit-transform-origin:center bottom; z-index: 100;}
 .clock .sec{width:4px; height:60px; background:red; border-radius:50% 50% 0 0; position:absolute; left:50%; margin-left:-2px; top:24px; -webkit-transform-origin:center bottom; z-index: 101;}
 .clock span{width:4px; height:10px; background:#ccc; position:absolute; left:50%; margin-left:-2px; top:0; -webkit-transform-origin:center 85px;}
 .clock span.bigScale{width:6px; margin-left:-3px; height:15px;}
@@ -15,3 +16,15 @@ ul{ list-style: none;}
 /* przj 个人总结 */
 #grzj dl{ margin-left: 20px;}
 #grzj span{cursor: pointer; margin-left: 10px;}
+
+#bycbox{ margin-left: 20px;}
+#bycbox ul{
+	width: 200px; height: auto;float: left;border-top: 1px solid #000;
+}
+#bycbox li{ width: 100%; height: 30px; overflow: hidden;position: relative;border-bottom: 1px dashed #333; line-height: 30px;}
+#bycbox li div{
+	position: absolute; top: -30px;
+}
+#bycbox li p{
+	margin-bottom:0; 
+}
